Add spotDL artist libraries to external search
